porygo_nz/static/porygo-nz.css
/*** Page layout ***/

html { font-size: 16px; }

body {
    display: flex;
    flex-direction: column;
    padding: 0;
    margin: 0;
    background: #F0F0F0;
    line-height: 1.4;
    font-family: Noto Sans, DejaVu Sans, Helvetica, Calibri, sans-serif;
}

/* Header */
header {
    display: flex;
    flex-direction: column;
}

/* Main nav */
nav {
    display: flex;
    align-items: baseline;
}

nav ul {
    display: flex;
    flex-wrap: wrap;
    list-style-type: none;
    margin: 0;
    padding: 0;
}

nav#main-nav {
    background: #5094B8;
    font-size: 1.5rem;
    line-height: 1;
    padding: 0 2rem;
}

nav#main-nav { z-index: 1; }
nav#main-nav a { color: #FFFFFF; }

a#site-title {
    font-size: 2rem;
    font-weight: bold;
    line-height: 0;
    white-space: nowrap;
}

a#site-title > img {
    display: inline-block;
    vertical-align: middle;
    margin-bottom: -36px;
}

nav#main-nav ul { padding: 0 1.5rem; }
nav#main-nav li { padding: 0 0.5rem; }

@media (max-width: 768px) {
    nav#main-nav {
        flex-direction: column;
        align-items: stretch;
        padding: 0;
    }

    a#site-title {
        text-align: center;
        border-bottom: 2px solid #407693;
    }

    nav#main-nav ul {
        justify-content: center;
        margin-left: 0;
        padding: 0.5rem;
    }
}

/* Subnav */
nav#subnav {
    background: #FFFFFF;
    border-bottom: 2px solid #CCCCCC;
    padding: 0.5rem 2rem;
    line-height: 1.2;
}

ul#breadcrumbs {
    align-items: baseline;
    margin-left: 100px;
}

ul#breadcrumbs > li:not(:last-child)::after {
    content: '»';
    margin: 0 0.375em;
}

ul#breadcrumbs > li:last-child {
    font-size: 1.2em;
    font-weight: bold;
}

@media (max-width: 768px) {
    nav#subnav { padding: 0.5rem 1rem; }
    ul#breadcrumbs { margin-left: 0; }
}

/* Main */
main { padding: 1.5rem 2rem; }

main > *:first-child { margin-top: 0; }

@media (max-width: 768px) {
    main { padding: 0.75rem 1rem; }
}


/*** General styles ***/

/* Links */
a { color: #5094B8; text-decoration: none; }
a:hover { color: #68ACD0; }
main a { font-weight: bold; }

/* Headings */
h1 {
    background: #5094B8;
    font-size: 1.5rem;
    color: #FFFFFF;
    border: 2px solid #4884A5;
    border-radius: 0.375rem;
    padding: 0.25rem 0.5rem;
    margin: 1.25rem calc(-0.5rem - 2px);
    line-height: 1;
}

/* Images */
img {
    vertical-align: middle;
    image-rendering: -moz-crisp-edges;
    image-rendering: pixelated;
}

img.pokemon-icon { background: url(/static/circle.svg) center no-repeat; }

/* Misc. */
*.pokemon-form-name { font-size: 0.8rem; font-style: italic; }

*.hidden-ability { font-style: italic; }

ul.ability-list {
    list-style-type: none;
    padding: 0;
    margin: 0;
    font-size: 0.75rem;
    line-height: 1;
}

/* Tables */
table {
    border-collapse: collapse;
    vertical-align: middle;
    white-space: nowrap;
}

tbody { border: solid #CCCCCC; border-width: 0 2px; }
tbody:first-of-type { border-top-width: 2px; }
tbody:last-of-type { border-bottom-width: 2px; }
tbody:nth-of-type(odd) { background-color: #F8F8F8; }
tbody:nth-of-type(even) { background-color: #E8E8E8; }

tbody + tbody { border-top: 1px solid #D8D8D8; }
tbody:nth-of-type(odd) > tr + tr { border-top: 1px ridge #E8E8E8; }
tbody:nth-of-type(even) > tr + tr { border-top: 1px ridge #D8D8D8; }

td, th { padding: 0 0.5rem; }
td:first-child, th:first-child { padding-left: 2.5rem; }
td:last-child, th:last-child { padding-right: 2.5rem; }
td:empty, th:empty { padding: 0; }

td.pokemon-collapse-cell { width: 1rem; padding-right: 0; }
td.pokemon-collapse-cell:first-child { padding-left: 0.5rem; }

td.pokemon-icon-cell {
    padding-right: 0;
    padding-left: calc(0.5rem - 5px);  /* 0.5rem to the background circle */
}
td.pokemon-icon-cell + td { padding-left: 0; }
td.pokemon-icon-cell:first-child { padding-left: calc(1.5rem - 5px); }

td.ability-cell { height: 2.5rem; }
td.stat-cell { width: 3ch; text-align: right; }
th.stat-cell { padding-left: 0; padding-right: 0; }
th.stat-cell:last-child { padding-right: 2rem; }

/* Pokémon table alt. form collapsing */
input.pokemon-collapse { display: none; }

label.pokemon-collapse-label,
label.pokemon-expand-label {
    display: block;
    height: 1rem;
    width: 1rem;
    cursor: pointer;
}

label.pokemon-collapse-label { background: url(/static/arrow-down.svg); }
label.pokemon-expand-label { background: url(/static/arrow-right.svg); }

*.collapsed-only { display: none; }

/* Type icons */
a.type {
    display: inline-block;
    width: 4.5em;

    padding: 1px;
    border: 1px solid #000000;  /* Black as fallback */
    border-color: var(--type-border);
    border-radius: 5px;
    box-shadow: 0 0 1.2px var(--type-border) inset;

    text-align: center;
    color: #FFFFFF;
    text-shadow: 1px 0 #000000, 1px 1px #000000, 0 1px #000000;
}

a.type:hover { text-decoration: underline; }

ul.type-list {
    display: flex;
    list-style-type: none;
    padding: 0;
    margin: 0;
}

a.type-normal   { background: #ADAD7B; --type-border: #735A4A; }
a.type-fire     { background: #F75231; --type-border: #943129; }
a.type-water    { background: #6B94F7; --type-border: #847B73; }
a.type-grass    { background: #7BCE52; --type-border: #5A8442; }
a.type-electric { background: #FFD631; --type-border: #BDA53A; }
a.type-ice      { background: #9CDEDE; --type-border: #9494A5; }
a.type-fighting { background: #943129; --type-border: #4A423A; }
a.type-poison   { background: #A542A5; --type-border: #4A3A52; }
a.type-ground   { background: #E6C56B; --type-border: #8C6B31; }
a.type-flying   { background: #AD94F7; --type-border: #7A5A9C; }
a.type-psychic  { background: #FF5A8C; --type-border: #946363; }
a.type-bug      { background: #ADBD21; --type-border: #7B9410; }
a.type-rock     { background: #BDA53A; --type-border: #8C6B31; }
a.type-ghost    { background: #735A9C; --type-border: #4A3A52; }
a.type-dragon   { background: #733AFF; --type-border: #4A3A94; }
a.type-dark     { background: #735A4A; --type-border: #4A423A; }
a.type-steel    { background: #BDBDD6; --type-border: #847B73; }
a.type-fairy    { background: #FFA5E6; --type-border: #B56B84; }
a.type-question { background: #6BA594; --type-border: #216B63; }

